fix gradle builds (#1)
* Add necessary dependencies and automatically select classifier

* Gradle 4.9 needed for JDK 11 (builds, but won't run application with gradle 4.8)

* Let git ignore temporary files from gradle, maven, and emacs

* Updated for openjfx 11-ea+19

* Updated for openjfx 11-ea+19