@@ -1,3 +1,44 @@
 apply plugin: 'java'
 apply plugin: 'application'
+repositories {
+    mavenCentral()
+}
 mainClassName = 'org.modernclients.javafx3d.mesh.MeshDemo'
+
+def currentOS = org.gradle.internal.os.OperatingSystem.current();
+def classifier
+if (currentOS.isWindows()) {
+    classifier = 'win'
+} else if (currentOS.isLinux()) {
+    classifier = 'linux'
+} else if (currentOS.isMacOsX()) {
+    classifier = 'mac'
+}
+
+
+compileJava {
+    doFirst {
+//        println classpath.asPath
+        options.compilerArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.controls',
+            '--add-modules', 'javafx.graphics'
+        ]
+        classpath = sourceSets.main.compileClasspath
+    }
+}
+run {
+    doFirst {
+        jvmArgs = [
+            '--module-path', classpath.filter{!it.name.startsWith("javafx-") || it.name.contains("-$classifier")}.asPath,
+            '--add-modules', 'javafx.controls',
+            '--add-modules', 'javafx.graphics'
+        ]
+        classpath = sourceSets.main.output
+    }
+}
+dependencies {
+    compile "org.openjfx:javafx-controls:11-ea+19:$classifier"
+    compile "org.openjfx:javafx-graphics:11-ea+19:$classifier"
+    compile "org.openjfx:javafx-base:11-ea+19:$classifier"
+}
